# vk-group-messages-mediator

./: Cargo.toml
src/: main.rs
src/app/: app_settings.rs  app_state.rs  mod.rs
src/app/model/: callback.rs  data.rs  group.rs  mod.rs
